[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hivmlib = { path = "../hivmlib" }
lazy_static = "1.4.0"
regex = "1.10.4"

